data - reformatted program_path to always be an object styles - adjusted the height of lineitems to show 6 lines of text without a scrollbar     adjusted image tooltip to show correctly api - handled adding new games with timestamps other - moved game seed files into their own folder for dev purposes     created a parser to transfer the old Game List.json into the database. Currently limited to ~50 items

--- a/src/renderer/styles/App.scss
+++ b/src/renderer/styles/App.scss
@@ -165,13 +165,14 @@ div.tooltip {
 }
 
 div.tooltip-image {
-  max-width: calc(100vw - $spacing);
+  max-width: 75vw;
   max-height: calc(100vh - $spacing);
-  width: auto;
+  width: max-content;
   padding: $spacing $spacing 0 $spacing;
 
   img {
-    padding: 0
+    padding: 0;
+    width: 100%;
   }
 }
 
